--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>DJCDev</title>
+    <title>Coming Soon!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
+<div class="container">
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+</div>
 </body>
 </html>
